# PrimMatrix

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  DMatrix.h  DMatrix_exception.h  Matrix_Exception.h  SMatrix.h
test/: CMakeLists.txt
test/DMatrixTest/: CMakeLists.txt  main.cpp
test/SMatrixTest/: CMakeLists.txt  main.cpp
test/sampletest/: CMakeLists.txt  main.cpp
